--- a/manifest.json
+++ b/manifest.json
@@ -24,5 +24,8 @@
       "css": ["css/style.css"],
       "js": ["js/jquery-3.1.1.min.js", "js/page.js"]
     }
-  ]
+  ],
+  "browser_action": {
+    "default_popup": "popup.html"
+  }
 }
